# qrneuron

./: README.md  example.py  pyproject.toml
data/: common_neuron.json  domain_sample_multi_choice_qa.json  language_qa.json  neuron_attr_score.json  subject_qa.json
keyneuron/: __init__.py  _extract_key_neuron.py
keyneuron/neuron_attribution/: __init__.py  _neuron_attribution.py
keyneurons/: _extract_key_neuron.py
keyneurons/neuron_attribution/: _config.py  _patch.py
