[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyneurons"
description = "A pipeline to locate key neurons in large language models"
version = "2024.07.09"

[tool.hatch.build.targets.wheel]
packages = ["keyneurons"]

dependencies = [
    "numpy>=1.23.5",
    "packaging>=23.1"
]

requires-python = ">= 3.10"

authors = [
  {name = "Lihu Chen"},
]

readme = "README.md"

license = {text = "MIT License"}

keywords = ["key neuron", "large language models", "knowledge attribution"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

Homepage = "https://github.com/tigerchen52/keyneurons"